--- a/bootsrap5.css
+++ b/bootsrap5.css
@@ -20,7 +20,7 @@ section {
 #gallery .row > * {
     padding: 0;
 }
-#gallery .row .jumbo {
+#gallery .row .jumbokon {
     width: 100%;
     height: 500px;
     border-bottom: 2px solid white;
